--- a/emaillist01/pom.xml
+++ b/emaillist01/pom.xml
@@ -15,6 +15,13 @@
 		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
+		<!-- mariadb jdbc driver -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+
 		<!-- servlet api -->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
