--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
 		<module>emaillist01</module>
 		<module>guestBook01</module>
 		<module>guestbook01</module>
+		<module>emaillist02</module>
 	</modules>
 </project>
