--- a/helloweb/src/main/webapp/WEB-INF/web.xml
+++ b/helloweb/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
 		<servlet-name>CookieServlet</servlet-name>
 		<servlet-class>helloweb.CookieServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>LifeCycleServlet</servlet-name>
+		<servlet-class>helloweb.LifeCycleServlet</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>HelloServlet</servlet-name>
@@ -22,6 +26,17 @@
 		<servlet-name>CookieServlet</servlet-name>
 		<url-pattern>/cookie</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>LifeCycleServlet</servlet-name>
+		<url-pattern>/lc</url-pattern>
+	</servlet-mapping>
+
+
+	<!-- Common Errors -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/view/error/error_404.jsp</location>
+	</error-page>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
