--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
 		<module>guestBook01</module>
 		<module>guestbook01</module>
 		<module>emaillist02</module>
+		<module>jstlel</module>
 	</modules>
 </project>
